VS2005/Common/VeCADAPI/CadApi.h


//*** end of strings identifiers ************************************



typedef unsigned long VHANDLE;    // pointer to VeCAD object
typedef unsigned long VDWG;       // pointer to VeCAD drawing
typedef unsigned long IDOBJ;      // identifier of VeCAD object

// on WM_VSCROLL
void CADAPI CadWinVScroll       (VDWG hDwg, HWND hWin, UINT SBCode, UINT Pos);

// on WM_SIZE
void CADAPI CadWinSize          (VDWG hDwg, HWND hWin, UINT SizeType, int cx, int cy);

// on WM_SETFOCUS
void CADAPI CadWinSetFocus      (VDWG hDwg, HWND hWin);

// on WM_KILLFOCUS
void CADAPI CadWinKillFocus     (VDWG hDwg, HWND hWin);

// on WM_DESTROY
void CADAPI CadWinDestroy       (VDWG hDwg, HWND hWin);

// on WM_CLOSE
BOOL CADAPI CadWinClose         (VDWG hDwg, HWND hWin);

// on WM_TIMER
BOOL CADAPI CadWinTimer         (VDWG hDwg, HWND hWin, int Id);




/******************************************************************************
* EXECUTE COMMAND
* Implements many CAD commands. These function is specially
* designed to use with an application's menus, buttons and accelerator keys.
* Command - identifier of a command, one of the CAD_CMD_... constants
*******************************************************************************/
void CADAPI CadExecute (VDWG hDwg, HWND hWin, int Command);

void CADAPI CadSetCmdParam (VDWG hDwg, int Command, void* pData);

void CADAPI CadGetCmdParam (VDWG hDwg, int Command, void* pData);



/******************************************************************************
* LAYER FUNCTIONS
*
* VeCAD drawing can contain many layers. Layer is a logical grouping of data,
* similar to transparent acetate overlays on a paper drawing.
* After using the CadFileNew() function a drawing already have one layer "0"
*******************************************************************************/
VHANDLE CADAPI CadAddLayer           (VDWG hDwg, LPCTSTR szName, int Color, IDOBJ IdLtype, int Lweight);

BOOL    CADAPI CadDeleteLayer        (VDWG hDwg, VHANDLE hLayer);

UINT    CADAPI CadCountLayers        (VDWG hDwg);

VHANDLE CADAPI CadGetCurLayer        (VDWG hDwg);

VHANDLE CADAPI CadSetCurLayer        (VDWG hDwg, VHANDLE hLayer);

VHANDLE CADAPI CadSetCurLayerByID    (VDWG hDwg, IDOBJ Id);

VHANDLE CADAPI CadSetCurLayerByName  (VDWG hDwg, LPCTSTR szLayerName);

VHANDLE CADAPI CadGetFirstLayer      (VDWG hDwg);

VHANDLE CADAPI CadGetNextLayer       (VDWG hDwg, VHANDLE hLayer);

VHANDLE CADAPI CadGetLayerByID       (VDWG hDwg, IDOBJ Id);

VHANDLE CADAPI CadGetLayerByName     (VDWG hDwg, LPCTSTR szName);

void    CADAPI CadSortLayers         (VDWG hDwg);

/********************************************************************
*  LAYER PROPERTIES
*********************************************************************/
IDOBJ   CADAPI CadLayerGetID         (VHANDLE hLayer);

void    CADAPI CadLayerGetName       (VHANDLE hLayer, TCHAR* szName);

void    CADAPI CadLayerPutName       (VHANDLE hLayer, LPCTSTR szName);

int     CADAPI CadLayerGetColor      (VHANDLE hLayer);

void    CADAPI CadLayerPutColor      (VHANDLE hLayer, int Color);

int     CADAPI CadLayerGetLineweight (VHANDLE hLayer);

void    CADAPI CadLayerPutLineweight (VHANDLE hLayer, int lw);

IDOBJ   CADAPI CadLayerGetLinetypeID (VHANDLE hLayer);

void    CADAPI CadLayerPutLinetypeID (VHANDLE hLayer, IDOBJ Id);

int     CADAPI CadLayerGetLevel      (VHANDLE hLayer);

void    CADAPI CadLayerPutLevel      (VHANDLE hLayer, int Level);

DWORD   CADAPI CadLayerGetUserData   (VHANDLE hLayer);

void    CADAPI CadLayerPutUserData   (VHANDLE hLayer, DWORD Val);

BOOL    CADAPI CadLayerGetLock       (VHANDLE hLayer);

void    CADAPI CadLayerPutLock       (VHANDLE hLayer, BOOL bLock);

BOOL    CADAPI CadLayerGetVisible    (VHANDLE hLayer);

void    CADAPI CadLayerPutVisible    (VHANDLE hLayer, BOOL bVisible);

BOOL    CADAPI CadLayerGetPrintable  (VHANDLE hLayer);

void    CADAPI CadLayerPutPrintable  (VHANDLE hLayer, BOOL bPrintable);

UINT    CADAPI CadLayerCountEntities (VHANDLE hLayer);

VHANDLE CADAPI CadLayerGetFirstEntity(VHANDLE hLayer);

VHANDLE CADAPI CadLayerGetNextEntity (VHANDLE hLayer, VHANDLE hEnt);

void    CADAPI CadLayerPutDescr      (VHANDLE hLayer, LPCTSTR Str, int nChars);

int     CADAPI CadLayerGetDescrLen   (VHANDLE hLayer);

void    CADAPI CadLayerGetDescr      (VHANDLE hLayer, TCHAR* pStr);

BOOL    CADAPI CadLayerGetDeleted    (VHANDLE hLayer);

void    CADAPI CadLayerPurge         (VHANDLE hLayer);



/********************************************************************
* LINETYPE FUNCTIONS
*
* VeCAD drawing can contain many linetypes
* A linetype is a repeating pattern of dashes, dots, and blank spaces. 
* The pattern is described by text string, for example "3,-1,0,-1" for dash-dot line
* After using the CadFileNew() function a drawing already have 3 linetypes
* "ByLayer", "ByBlock", "Continuous"
*********************************************************************/
VHANDLE CADAPI CadAddLinetype          (VDWG hDwg, LPCTSTR szName, LPCTSTR szFormat, LPCTSTR szPict);

VHANDLE CADAPI CadAddLinetypeF         (VDWG hDwg, LPCTSTR szName, LPCTSTR szFileName);

BOOL    CADAPI CadDeleteLinetype       (VDWG hDwg, VHANDLE hLtype);

UINT    CADAPI CadCountLinetypes       (VDWG hDwg);

VHANDLE CADAPI CadGetCurLinetype       (VDWG hDwg);

VHANDLE CADAPI CadSetCurLinetype       (VDWG hDwg, VHANDLE hLtype);

VHANDLE CADAPI CadSetCurLinetypeByID   (VDWG hDwg, IDOBJ Id);

VHANDLE CADAPI CadSetCurLinetypeByName (VDWG hDwg, LPCTSTR szLtypeName);

VHANDLE CADAPI CadGetFirstLinetype     (VDWG hDwg);

VHANDLE CADAPI CadGetNextLinetype      (VDWG hDwg, VHANDLE hLtype);

VHANDLE CADAPI CadGetLinetypeByID      (VDWG hDwg, IDOBJ Id);

VHANDLE CADAPI CadGetLinetypeByName    (VDWG hDwg, LPCTSTR szName);

VHANDLE CADAPI CadGetLinetypeByLayer   (VDWG hDwg);

VHANDLE CADAPI CadGetLinetypeByBlock   (VDWG hDwg);

VHANDLE CADAPI CadGetLinetypeContinuous(VDWG hDwg);

/********************************************************************
*  LINETYPE PROPERTIES
*********************************************************************/
IDOBJ   CADAPI CadLinetypeGetID        (VHANDLE hLtype);

void    CADAPI CadLinetypeGetName      (VHANDLE hLtype, TCHAR* szName);

void    CADAPI CadLinetypePutName      (VHANDLE hLtype, LPCTSTR szName);

void    CADAPI CadLinetypeGetData      (VHANDLE hLtype, VDWG hDwg, TCHAR* szData);

void    CADAPI CadLinetypePutData      (VHANDLE hLtype, VDWG hDwg, LPCTSTR szData);

BOOL    CADAPI CadLinetypePutDataF     (VHANDLE hLtype, LPCTSTR szFileName);

void    CADAPI CadLinetypeGetDescr     (VHANDLE hLtype, TCHAR* szDescr);

void    CADAPI CadLinetypePutDescr     (VHANDLE hLtype, LPCTSTR szDescr);

double  CADAPI CadLinetypeGetScale     (VHANDLE hLtype);

void    CADAPI CadLinetypePutScale     (VHANDLE hLtype, double Scal);

BOOL    CADAPI CadLinetypeIsByLayer    (VHANDLE hLtype);

BOOL    CADAPI CadLinetypeIsByBlock    (VHANDLE hLtype);

BOOL    CADAPI CadLinetypeIsContinuous (VHANDLE hLtype);


/******************************************************************************
* PAGE FUNCTIONS
*
* VeCAD drawing can contain many pages
* The first page is represent "Model Space" and always has unlimites size
* After using the CadFileNew() function a drawing already have the first page.
*******************************************************************************/
VHANDLE CADAPI CadAddPage         (VDWG hDwg, LPCTSTR szName, int Size, int Orient, UINT Width, UINT Height);

BOOL    CADAPI CadDeletePage      (VDWG hDwg, VHANDLE hPage);

UINT    CADAPI CadCountPages      (VDWG hDwg);

VHANDLE CADAPI CadGetCurPage      (VDWG hDwg);

VHANDLE CADAPI CadSetCurPage      (VDWG hDwg, VHANDLE hPage);

VHANDLE CADAPI CadSetCurPageByID  (VDWG hDwg, IDOBJ Id);

VHANDLE CADAPI CadSetCurPageByName(VDWG hDwg, LPCTSTR szName);

VHANDLE CADAPI CadGetFirstPage    (VDWG hDwg);

VHANDLE CADAPI CadGetNextPage     (VDWG hDwg, VHANDLE hPage);

VHANDLE CADAPI CadGetPageByID     (VDWG hDwg, IDOBJ Id);

VHANDLE CADAPI CadGetPageByName   (VDWG hDwg, LPCTSTR szName);

/********************************************************************
*  PAGE PROPERTIES
*********************************************************************/
IDOBJ   CADAPI CadPageGetID       (VHANDLE hPage);

void    CADAPI CadPageGetName     (VHANDLE hPage, TCHAR* szName);

void    CADAPI CadPagePutName     (VHANDLE hPage, LPCTSTR szName);

UINT    CADAPI CadPageGetSize     (VHANDLE hPage);

void    CADAPI CadPagePutSize     (VHANDLE hPage, UINT Size);

UINT    CADAPI CadPageGetOrient   (VHANDLE hPage);

void    CADAPI CadPagePutOrient   (VHANDLE hPage, UINT Orient);

UINT    CADAPI CadPageGetWidth    (VHANDLE hPage);

void    CADAPI CadPagePutWidth    (VHANDLE hPage, UINT Width);

UINT    CADAPI CadPageGetHeight   (VHANDLE hPage);

void    CADAPI CadPagePutHeight   (VHANDLE hPage, UINT Height);

BOOL    CADAPI CadPageSave        (VDWG hDwg, VHANDLE hPage, LPCTSTR szFileName);

BOOL    CADAPI CadPageCopy        (VDWG hSrcDwg, VHANDLE hSrcPage, VDWG hDestDwg, VHANDLE hDestPage);



/********************************************************************
*
*  TEXT STYLES FUNCTIONS
*
*********************************************************************/
VHANDLE CADAPI CadAddTStyle           (VDWG hDwg, LPCTSTR szName, LPCTSTR szFontName);

BOOL    CADAPI CadDeleteTStyle        (VDWG hDwg, VHANDLE hTStyle);

UINT    CADAPI CadCountTStyles        (VDWG hDwg);

VHANDLE CADAPI CadGetCurTStyle        (VDWG hDwg);

VHANDLE CADAPI CadSetCurTStyle        (VDWG hDwg, VHANDLE hTStyle);

VHANDLE CADAPI CadSetCurTStyleByID    (VDWG hDwg, IDOBJ Id);

VHANDLE CADAPI CadSetCurTStyleByName  (VDWG hDwg, LPCTSTR szName);

VHANDLE CADAPI CadGetFirstTStyle      (VDWG hDwg);

VHANDLE CADAPI CadGetNextTStyle       (VDWG hDwg, VHANDLE hTStyle);

VHANDLE CADAPI CadGetTStyleByID       (VDWG hDwg, IDOBJ Id);

VHANDLE CADAPI CadGetTStyleByName     (VDWG hDwg, LPCTSTR szName);

/********************************************************************
*  TEXT STYLE PROPERTIES 
*********************************************************************/
IDOBJ   CADAPI CadTStyleGetID         (VHANDLE hTStyle);

void    CADAPI CadTStyleGetName       (VHANDLE hTStyle, TCHAR* szName);