VS2005/Common/VeCADAPI/CadApi.bas

Public Declare Sub      CadWinVScroll Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long, ByVal SBCode As Long, ByVal Pos As Long)
Public Declare Sub      CadWinSize Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long, ByVal SizeType As Long, ByVal cx As Long, ByVal cy As Long)
Public Declare Sub      CadWinSetFocus Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long)
Public Declare Sub      CadWinKillFocus Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long)
Public Declare Sub      CadWinDestroy Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long)
Public Declare Function CadWinClose Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long) As Long
Public Declare Function CadWinTimer Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long, ByVal Id As Long) As Long
Public Declare Sub      CadExecute Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long, ByVal Command As Long)
Public Declare Sub      CadSetCmdParam Lib "vecad.dll" (ByVal hDwg As Long, ByVal Command As Long, ByVal pData As Any)
Public Declare Sub      CadGetCmdParam Lib "vecad.dll" (ByVal hDwg As Long, ByVal Command As Long, ByVal pData As Any)
Public Declare Function CadAddLayer Lib "vecad.dll" (ByVal hDwg As Long, ByVal szName As String, ByVal Color As Long, ByVal IdLtype As Long, ByVal Lweight As Long) As Long
Public Declare Function CadDeleteLayer Lib "vecad.dll" (ByVal hDwg As Long, ByVal hLayer As Long) As Long
Public Declare Function CadCountLayers Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadGetCurLayer Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadSetCurLayer Lib "vecad.dll" (ByVal hDwg As Long, ByVal hLayer As Long) As Long
Public Declare Function CadSetCurLayerByID Lib "vecad.dll" (ByVal hDwg As Long, ByVal Id As Long) As Long
Public Declare Function CadSetCurLayerByName Lib "vecad.dll" (ByVal hDwg As Long, ByVal szLayerName As String) As Long
Public Declare Function CadGetFirstLayer Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadGetNextLayer Lib "vecad.dll" (ByVal hDwg As Long, ByVal hLayer As Long) As Long
Public Declare Function CadGetLayerByID Lib "vecad.dll" (ByVal hDwg As Long, ByVal Id As Long) As Long
Public Declare Function CadGetLayerByName Lib "vecad.dll" (ByVal hDwg As Long, ByVal szName As String) As Long
Public Declare Sub      CadSortLayers Lib "vecad.dll" (ByVal hDwg As Long)
Public Declare Function CadLayerGetID Lib "vecad.dll" (ByVal hLayer As Long) As Long
Public Declare Sub      CadLayerGetName Lib "vecad.dll" (ByVal hLayer As Long, ByVal szName As Any)
Public Declare Sub      CadLayerPutName Lib "vecad.dll" (ByVal hLayer As Long, ByVal szName As String)
Public Declare Function CadLayerGetColor Lib "vecad.dll" (ByVal hLayer As Long) As Long
Public Declare Sub      CadLayerPutColor Lib "vecad.dll" (ByVal hLayer As Long, ByVal Color As Long)
Public Declare Function CadLayerGetLineweight Lib "vecad.dll" (ByVal hLayer As Long) As Long
Public Declare Sub      CadLayerPutLineweight Lib "vecad.dll" (ByVal hLayer As Long, ByVal lw As Long)
Public Declare Function CadLayerGetLinetypeID Lib "vecad.dll" (ByVal hLayer As Long) As Long
Public Declare Sub      CadLayerPutLinetypeID Lib "vecad.dll" (ByVal hLayer As Long, ByVal Id As Long)
Public Declare Function CadLayerGetLevel Lib "vecad.dll" (ByVal hLayer As Long) As Long
Public Declare Sub      CadLayerPutLevel Lib "vecad.dll" (ByVal hLayer As Long, ByVal Level As Long)
Public Declare Function CadLayerGetUserData Lib "vecad.dll" (ByVal hLayer As Long) As Long
Public Declare Sub      CadLayerPutUserData Lib "vecad.dll" (ByVal hLayer As Long, ByVal Val As Long)
Public Declare Function CadLayerGetLock Lib "vecad.dll" (ByVal hLayer As Long) As Long
Public Declare Sub      CadLayerPutLock Lib "vecad.dll" (ByVal hLayer As Long, ByVal bLock As Long)
Public Declare Function CadLayerGetVisible Lib "vecad.dll" (ByVal hLayer As Long) As Long
Public Declare Sub      CadLayerPutVisible Lib "vecad.dll" (ByVal hLayer As Long, ByVal bVisible As Long)
Public Declare Function CadLayerGetPrintable Lib "vecad.dll" (ByVal hLayer As Long) As Long
Public Declare Sub      CadLayerPutPrintable Lib "vecad.dll" (ByVal hLayer As Long, ByVal bPrintable As Long)
Public Declare Function CadLayerCountEntities Lib "vecad.dll" (ByVal hLayer As Long) As Long
Public Declare Function CadLayerGetFirstEntity Lib "vecad.dll" (ByVal hLayer As Long) As Long
Public Declare Function CadLayerGetNextEntity Lib "vecad.dll" (ByVal hLayer As Long, ByVal hEnt As Long) As Long
Public Declare Sub      CadLayerPutDescr Lib "vecad.dll" (ByVal hLayer As Long, ByVal Str As String, ByVal nChars As Long)
Public Declare Function CadLayerGetDescrLen Lib "vecad.dll" (ByVal hLayer As Long) As Long
Public Declare Sub      CadLayerGetDescr Lib "vecad.dll" (ByVal hLayer As Long, ByVal pStr As Any)
Public Declare Function CadLayerGetDeleted Lib "vecad.dll" (ByVal hLayer As Long) As Long
Public Declare Sub      CadLayerPurge Lib "vecad.dll" (ByVal hLayer As Long)
Public Declare Function CadAddLinetype Lib "vecad.dll" (ByVal hDwg As Long, ByVal szName As String, ByVal szFormat As String, ByVal szPict As String) As Long
Public Declare Function CadAddLinetypeF Lib "vecad.dll" (ByVal hDwg As Long, ByVal szName As String, ByVal szFileName As String) As Long
Public Declare Function CadDeleteLinetype Lib "vecad.dll" (ByVal hDwg As Long, ByVal hLtype As Long) As Long
Public Declare Function CadCountLinetypes Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadGetCurLinetype Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadSetCurLinetype Lib "vecad.dll" (ByVal hDwg As Long, ByVal hLtype As Long) As Long
Public Declare Function CadSetCurLinetypeByID Lib "vecad.dll" (ByVal hDwg As Long, ByVal Id As Long) As Long
Public Declare Function CadSetCurLinetypeByName Lib "vecad.dll" (ByVal hDwg As Long, ByVal szLtypeName As String) As Long
Public Declare Function CadGetFirstLinetype Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadGetNextLinetype Lib "vecad.dll" (ByVal hDwg As Long, ByVal hLtype As Long) As Long
Public Declare Function CadGetLinetypeByID Lib "vecad.dll" (ByVal hDwg As Long, ByVal Id As Long) As Long
Public Declare Function CadGetLinetypeByName Lib "vecad.dll" (ByVal hDwg As Long, ByVal szName As String) As Long
Public Declare Function CadGetLinetypeByLayer Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadGetLinetypeByBlock Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadGetLinetypeContinuous Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadLinetypeGetID Lib "vecad.dll" (ByVal hLtype As Long) As Long
Public Declare Sub      CadLinetypeGetName Lib "vecad.dll" (ByVal hLtype As Long, ByVal szName As Any)
Public Declare Sub      CadLinetypePutName Lib "vecad.dll" (ByVal hLtype As Long, ByVal szName As String)
Public Declare Sub      CadLinetypeGetData Lib "vecad.dll" (ByVal hLtype As Long, ByVal hDwg As Long, ByVal szData As Any)
Public Declare Sub      CadLinetypePutData Lib "vecad.dll" (ByVal hLtype As Long, ByVal hDwg As Long, ByVal szData As String)
Public Declare Function CadLinetypePutDataF Lib "vecad.dll" (ByVal hLtype As Long, ByVal szFileName As String) As Long
Public Declare Sub      CadLinetypeGetDescr Lib "vecad.dll" (ByVal hLtype As Long, ByVal szDescr As Any)
Public Declare Sub      CadLinetypePutDescr Lib "vecad.dll" (ByVal hLtype As Long, ByVal szDescr As String)
Public Declare Function CadLinetypeGetScale Lib "vecad.dll" (ByVal hLtype As Long) As Double
Public Declare Sub      CadLinetypePutScale Lib "vecad.dll" (ByVal hLtype As Long, ByVal Scal As Double)
Public Declare Function CadLinetypeIsByLayer Lib "vecad.dll" (ByVal hLtype As Long) As Long
Public Declare Function CadLinetypeIsByBlock Lib "vecad.dll" (ByVal hLtype As Long) As Long
Public Declare Function CadLinetypeIsContinuous Lib "vecad.dll" (ByVal hLtype As Long) As Long
Public Declare Function CadAddPage Lib "vecad.dll" (ByVal hDwg As Long, ByVal szName As String, ByVal Size As Long, ByVal Orient As Long, ByVal Width As Long, ByVal Height As Long) As Long
Public Declare Function CadDeletePage Lib "vecad.dll" (ByVal hDwg As Long, ByVal hPage As Long) As Long
Public Declare Function CadCountPages Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadGetCurPage Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadSetCurPage Lib "vecad.dll" (ByVal hDwg As Long, ByVal hPage As Long) As Long
Public Declare Function CadSetCurPageByID Lib "vecad.dll" (ByVal hDwg As Long, ByVal Id As Long) As Long
Public Declare Function CadSetCurPageByName Lib "vecad.dll" (ByVal hDwg As Long, ByVal szName As String) As Long
Public Declare Function CadGetFirstPage Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadGetNextPage Lib "vecad.dll" (ByVal hDwg As Long, ByVal hPage As Long) As Long
Public Declare Function CadGetPageByID Lib "vecad.dll" (ByVal hDwg As Long, ByVal Id As Long) As Long
Public Declare Function CadGetPageByName Lib "vecad.dll" (ByVal hDwg As Long, ByVal szName As String) As Long
Public Declare Function CadPageGetID Lib "vecad.dll" (ByVal hPage As Long) As Long
Public Declare Sub      CadPageGetName Lib "vecad.dll" (ByVal hPage As Long, ByVal szName As Any)
Public Declare Sub      CadPagePutName Lib "vecad.dll" (ByVal hPage As Long, ByVal szName As String)
Public Declare Function CadPageGetSize Lib "vecad.dll" (ByVal hPage As Long) As Long
Public Declare Sub      CadPagePutSize Lib "vecad.dll" (ByVal hPage As Long, ByVal Size As Long)
Public Declare Function CadPageGetOrient Lib "vecad.dll" (ByVal hPage As Long) As Long
Public Declare Sub      CadPagePutOrient Lib "vecad.dll" (ByVal hPage As Long, ByVal Orient As Long)
Public Declare Function CadPageGetWidth Lib "vecad.dll" (ByVal hPage As Long) As Long
Public Declare Sub      CadPagePutWidth Lib "vecad.dll" (ByVal hPage As Long, ByVal Width As Long)
Public Declare Function CadPageGetHeight Lib "vecad.dll" (ByVal hPage As Long) As Long
Public Declare Sub      CadPagePutHeight Lib "vecad.dll" (ByVal hPage As Long, ByVal Height As Long)
Public Declare Function CadPageSave Lib "vecad.dll" (ByVal hDwg As Long, ByVal hPage As Long, ByVal szFileName As String) As Long
Public Declare Function CadPageCopy Lib "vecad.dll" (ByVal hSrcDwg As Long, ByVal hSrcPage As Long, ByVal hDestDwg As Long, ByVal hDestPage As Long) As Long
Public Declare Function CadAddTStyle Lib "vecad.dll" (ByVal hDwg As Long, ByVal szName As String, ByVal szFontName As String) As Long
Public Declare Function CadDeleteTStyle Lib "vecad.dll" (ByVal hDwg As Long, ByVal hTStyle As Long) As Long
Public Declare Function CadCountTStyles Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadGetCurTStyle Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadSetCurTStyle Lib "vecad.dll" (ByVal hDwg As Long, ByVal hTStyle As Long) As Long
Public Declare Function CadSetCurTStyleByID Lib "vecad.dll" (ByVal hDwg As Long, ByVal Id As Long) As Long
Public Declare Function CadSetCurTStyleByName Lib "vecad.dll" (ByVal hDwg As Long, ByVal szName As String) As Long
Public Declare Function CadGetFirstTStyle Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadGetNextTStyle Lib "vecad.dll" (ByVal hDwg As Long, ByVal hTStyle As Long) As Long
Public Declare Function CadGetTStyleByID Lib "vecad.dll" (ByVal hDwg As Long, ByVal Id As Long) As Long
Public Declare Function CadGetTStyleByName Lib "vecad.dll" (ByVal hDwg As Long, ByVal szName As String) As Long
Public Declare Function CadTStyleGetID Lib "vecad.dll" (ByVal hTStyle As Long) As Long
Public Declare Sub      CadTStyleGetName Lib "vecad.dll" (ByVal hTStyle As Long, ByVal szName As Any)
